Feat: Google Oauth Client side

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-SERVER_BASE_URL = http://localhost:5001/
+REACT_APP_SERVER_BASE_URL = http://localhost:5001
+REACT_APP_CLIENT_ID = 433747690453-r8tc82mlf4uqvbiuahl24jfh89ipn3ik.apps.googleusercontent.com
