--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
     "react-type": "^0.1.0",
     "react-typed": "^2.0.12",
     "web-vitals": "^2.1.4",
