--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
