--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_SERVER_BASE_URL = http://localhost:5001
 REACT_APP_CLIENT_ID = 433747690453-r8tc82mlf4uqvbiuahl24jfh89ipn3ik.apps.googleusercontent.com
+REACT_APP_PAYPAL = AfhYXhtNwtSeR5FDtGpvuBLmhRrA3Xf3IQsN3CojYBN6rW-5my4pV1b0A9Zt0NSSsyK9tnmDEDnw_y4N
