--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^11.0.5",
     "react-type": "^0.1.0",
     "react-typed": "^2.0.12",
+    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.5"
   },
